--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "body-parser": "^1.17.2",
-    "mongodb": "*"
+    "mongodb": "*",
+    "request": "^2.83.0"
   }
 }
